--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,15 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Stubbens Github
+email: s237215@dtu.dk
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  More than just a page...you might be able to click on stuff, and see new pages.
+  This is the place for adventurous people who are not afraid of clicking on stuff on the internet 
+baseurl: "subchris.github.io" # the subpath of your site, e.g. /blog
+url: "subchris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: sofiestubkjaerchristensen
+github_username:  StubChris
 
 # Build settings
 theme: minima
