--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Stubbens Github
 email: s237215@dtu.dk
 description: >- # this means to ignore newlines until "baseurl:"
-  More than just a page...you might be able to click on stuff, and see new pages.
+  More than just a page...you might be able to click on stuff.
   This is the place for adventurous people who are not afraid of clicking on stuff on the internet 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "StubCris.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -29,8 +29,9 @@ twitter_username: sofiestubkjaerchristensen
 github_username:  StubChris
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/dinky@v0.2.0
 plugins:
+  - jekyll-remote-theme 
   - jekyll-feed
 
 # Exclude from processing.
