modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ twitter_username: sofiestubkjaerchristensen
 github_username:  StubChris
 
 # Build settings
-remote_theme: minima
+#remote_theme: minima
+theme: jekyll-theme-dinky
 plugins:
   - jekyll-feed
 
