--- a/_config.yml
+++ b/_config.yml
@@ -23,15 +23,16 @@ email: s237215@dtu.dk
 description: >- # this means to ignore newlines until "baseurl:"
   More than just a page...you might be able to click on stuff.
   This is the place for adventurous people who are not afraid of clicking on stuff on the internet 
-baseurl: "https://stubchris.github.io/" # the subpath of your site, e.g. /blog
-url: "https://stubchris.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: sofiestubkjaerchristensen
-github_username:  StubChris
+#baseurl: "https://stubchris.github.io/" # the subpath of your site, e.g. /blog
+#url: "https://stubchris.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+#twitter_username: sofiestubkjaerchristensen
+#github_username:  StubChris
 
 # Build settings
 #remote_theme: minima
-theme: jekyll-theme-dinky
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
 
 # Exclude from processing.
