--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 #github_username:  StubChris
 
 # Build settings
-#remote_theme: minima
-remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: minima
+#remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-  - jekyll-remote-theme
+#  - jekyll-remote-theme
   - jekyll-feed
 
 # Exclude from processing.
