modified:   Gemfile 	modified:   Gemfile.lock 	modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ twitter_username: stubben
 github_username:  stubben
 
 # Build settings
-#theme: minima
-theme: jekyll-theme-dinky
+theme: minima
+#theme: jekyll-theme-dinky
 plugins:
   - jekyll-feed
 
