--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Stubbens Github
-email: your-email@example.com
+email: s237215@dtu.dk
 description: >- # this means to ignore newlines until "baseurl:"
   This is a page for clicking on stuff. You can click and maybe see new things.
 baseurl: "" # the subpath of your site, e.g. /blog
